[gd_scene load_steps=12 format=3 uid="uid://lul6b2ogi6me"]

[ext_resource type="Texture2D" uid="uid://05lrthggrwfk" path="res://asset/ui/MonedaR.png" id="1_67pyt"]
[ext_resource type="Theme" uid="uid://bm00mxxnom0na" path="res://ui/uiTheme.tres" id="1_gcs0h"]
[ext_resource type="Script" path="res://ui/levelDetails/levelDetailsNew.gd" id="1_oxweo"]
[ext_resource type="Texture2D" uid="uid://duyc66ghlyvjq" path="res://asset/ui/gem.png" id="2_341hl"]
[ext_resource type="Texture2D" uid="uid://ck0do3yvu5m6h" path="res://asset/ui/Icon_Stats.png" id="2_ts1r7"]
[ext_resource type="Texture2D" uid="uid://ce20rr8rjyd62" path="res://asset/ui/cat ui test.png" id="3_dmx8g"]
[ext_resource type="Texture2D" uid="uid://c0yubmwoidxd8" path="res://asset/ui/goldCoin.png" id="4_cy2sh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5o170"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f40j3"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wnwoa"]
size = Vector2(200, 55)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_svw61"]
size = Vector2(160, 50)

[node name="LevelDetailsNew" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 466.0
offset_top = 267.0
offset_right = -611.0
offset_bottom = -186.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gcs0h")
script = ExtResource("1_oxweo")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = 16.0
offset_top = 16.0
offset_right = 222.0
offset_bottom = 93.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5o170")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/font_size = 20
text = "Wood 1"

[node name="TextureButton" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/TextureButton"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 0
offset_left = -15.0
offset_top = 7.0
offset_right = 25.0
offset_bottom = 47.0
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_ts1r7")
expand_mode = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "20 %"

[node name="LevelDetails" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="RedCoins" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/LevelDetails"]
layout_mode = 2
size_flags_horizontal = 4

[node name="redCoin1" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/LevelDetails/RedCoins"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("1_67pyt")
expand_mode = 1

[node name="redCoin2" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/LevelDetails/RedCoins"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("1_67pyt")
expand_mode = 2

[node name="redCoin3" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/LevelDetails/RedCoins"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("1_67pyt")
expand_mode = 2

[node name="redCoin4" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/LevelDetails/RedCoins"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("1_67pyt")
expand_mode = 2

[node name="redCoin5" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/LevelDetails/RedCoins"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("1_67pyt")
expand_mode = 2

[node name="Gems" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/LevelDetails"]
layout_mode = 2
size_flags_horizontal = 4

[node name="gem1" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/LevelDetails/Gems"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_341hl")
expand_mode = 1

[node name="gem2" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/LevelDetails/Gems"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("2_341hl")
expand_mode = 2

[node name="gem3" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/LevelDetails/Gems"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("2_341hl")
expand_mode = 2

[node name="gem4" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/LevelDetails/Gems"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("2_341hl")
expand_mode = 2

[node name="gem5" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/LevelDetails/Gems"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("2_341hl")
expand_mode = 2

[node name="Cats" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/LevelDetails"]
layout_mode = 2
size_flags_horizontal = 4

[node name="cat1" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/LevelDetails/Cats"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
texture = ExtResource("3_dmx8g")
expand_mode = 2

[node name="cat2" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/LevelDetails/Cats"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
texture = ExtResource("3_dmx8g")
expand_mode = 2

[node name="cat3" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/LevelDetails/Cats"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
texture = ExtResource("3_dmx8g")
expand_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/LevelDetails"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/LevelDetails/HBoxContainer2"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_cy2sh")
expand_mode = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/LevelDetails/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "30 / 70"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/LevelDetails"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_f40j3")

[node name="enterLevel1" type="TouchScreenButton" parent="PanelContainer/MarginContainer"]
position = Vector2(97, 55)
scale = Vector2(1, 0.6)
shape = SubResource("RectangleShape2D_wnwoa")
action = "ui_accept"

[node name="enterLevel2" type="TouchScreenButton" parent="PanelContainer/MarginContainer"]
position = Vector2(77, 19)
scale = Vector2(1, 0.88)
shape = SubResource("RectangleShape2D_svw61")
action = "ui_accept"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
